dsl_if_v3/py/MyDSLParser.py
# Generated from MyDSLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyDSLParser ( Parser ):

    grammarFileName = "MyDSLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'if'", "'else'", "'print'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "';'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "LET", "IF", "ELSE", "PRINT", "ID", "NUMBER", 
                      "STRING", "WS", "EQUAL", "SEMICOLON", "LPAREN", "RPAREN", 
                      "LBRACE", "RBRACE", "OP1", "OP2", "COMPARE" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_expr = 2

    ruleNames =  [ "prog", "stmt", "expr" ]

    EOF = Token.EOF
    LET=1
    IF=2
    ELSE=3
    PRINT=4
    ID=5
    NUMBER=6
    STRING=7
    WS=8
    EQUAL=9
    SEMICOLON=10
    LPAREN=11
    RPAREN=12
    LBRACE=13
    RBRACE=14
    OP1=15
    OP2=16
    COMPARE=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyDSLParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyDSLParser.StmtContext)
            else:
                return self.getTypedRuleContext(MyDSLParser.StmtContext,i)


        def getRuleIndex(self):
            return MyDSLParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = MyDSLParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 6
                self.stmt()
                self.state = 9 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 22) != 0)):
                    break

            self.state = 11
            self.match(MyDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MyDSLParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyDSLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PRINT(self):
            return self.getToken(MyDSLParser.PRINT, 0)
        def LPAREN(self):
            return self.getToken(MyDSLParser.LPAREN, 0)
        def STRING(self):
            return self.getToken(MyDSLParser.STRING, 0)
        def RPAREN(self):
            return self.getToken(MyDSLParser.RPAREN, 0)
        def SEMICOLON(self):
            return self.getToken(MyDSLParser.SEMICOLON, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class IfElseContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyDSLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(MyDSLParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(MyDSLParser.ExprContext,0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(MyDSLParser.LBRACE)
            else:
                return self.getToken(MyDSLParser.LBRACE, i)
        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(MyDSLParser.RBRACE)
            else:
                return self.getToken(MyDSLParser.RBRACE, i)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyDSLParser.StmtContext)
            else:
                return self.getTypedRuleContext(MyDSLParser.StmtContext,i)

        def ELSE(self):
            return self.getToken(MyDSLParser.ELSE, 0)
        def LPAREN(self):
            return self.getToken(MyDSLParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(MyDSLParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)


    class VariableAssignContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MyDSLParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(MyDSLParser.LET, 0)
        def ID(self):
            return self.getToken(MyDSLParser.ID, 0)
        def EQUAL(self):
            return self.getToken(MyDSLParser.EQUAL, 0)
        def expr(self):
            return self.getTypedRuleContext(MyDSLParser.ExprContext,0)

        def SEMICOLON(self):
            return self.getToken(MyDSLParser.SEMICOLON, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableAssign" ):
                return visitor.visitVariableAssign(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = MyDSLParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = MyDSLParser.VariableAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 13
                self.match(MyDSLParser.LET)
                self.state = 14
                self.match(MyDSLParser.ID)
                self.state = 15
                self.match(MyDSLParser.EQUAL)
                self.state = 16
                self.expr(0)
                self.state = 17
                self.match(MyDSLParser.SEMICOLON)
                pass

            elif la_ == 2:
                localctx = MyDSLParser.IfElseContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 19
                self.match(MyDSLParser.IF)
                self.state = 20
                self.expr(0)
                self.state = 21
                self.match(MyDSLParser.LBRACE)
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22) != 0):
                    self.state = 22
                    self.stmt()
                    self.state = 27
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 28
                self.match(MyDSLParser.RBRACE)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 29
                    self.match(MyDSLParser.ELSE)
                    self.state = 30
                    self.match(MyDSLParser.LBRACE)
                    self.state = 34
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22) != 0):
                        self.state = 31
                        self.stmt()
                        self.state = 36
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 37
                    self.match(MyDSLParser.RBRACE)


                pass

            elif la_ == 3:
                localctx = MyDSLParser.IfElseContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.match(MyDSLParser.IF)
                self.state = 41
                self.match(MyDSLParser.LPAREN)
                self.state = 42
                self.expr(0)
                self.state = 43
                self.match(MyDSLParser.RPAREN)
                self.state = 44
                self.match(MyDSLParser.LBRACE)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22) != 0):
                    self.state = 45
                    self.stmt()
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 51
                self.match(MyDSLParser.RBRACE)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 52
                    self.match(MyDSLParser.ELSE)
                    self.state = 53
                    self.match(MyDSLParser.LBRACE)
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 22) != 0):
                        self.state = 54
                        self.stmt()
                        self.state = 59
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 60
                    self.match(MyDSLParser.RBRACE)


                pass

            elif la_ == 4:
                localctx = MyDSLParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.match(MyDSLParser.PRINT)
                self.state = 64
                self.match(MyDSLParser.LPAREN)
                self.state = 65
                self.match(MyDSLParser.STRING)
                self.state = 66
                self.match(MyDSLParser.RPAREN)
                self.state = 67
                self.match(MyDSLParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MyDSLParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyDSLParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyDSLParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(MyDSLParser.RPAREN, 0)

        def ID(self):
            return self.getToken(MyDSLParser.ID, 0)

        def NUMBER(self):
            return self.getToken(MyDSLParser.NUMBER, 0)

        def COMPARE(self):
            return self.getToken(MyDSLParser.COMPARE, 0)

        def OP1(self):
            return self.getToken(MyDSLParser.OP1, 0)

        def OP2(self):
            return self.getToken(MyDSLParser.OP2, 0)

        def getRuleIndex(self):
            return MyDSLParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MyDSLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 71
                self.match(MyDSLParser.LPAREN)
                self.state = 72
                self.expr(0)
                self.state = 73
                self.match(MyDSLParser.RPAREN)
                pass
            elif token in [5]:
                self.state = 75
                self.match(MyDSLParser.ID)
                pass
            elif token in [6]:
                self.state = 76
                self.match(MyDSLParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 88
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = MyDSLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 79
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 80
                        self.match(MyDSLParser.COMPARE)
                        self.state = 81
                        self.expr(7)
                        pass

                    elif la_ == 2:
                        localctx = MyDSLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 82
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 83
                        self.match(MyDSLParser.OP1)
                        self.state = 84
                        self.expr(6)
                        pass

                    elif la_ == 3:
                        localctx = MyDSLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 85
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 86
                        self.match(MyDSLParser.OP2)
                        self.state = 87
                        self.expr(5)
                        pass

             
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         




